creación de vista "Consultar Pedidos Mesa"

--- a/app/src/main/res/menu/products_menu.xml
+++ b/app/src/main/res/menu/products_menu.xml
@@ -14,4 +14,7 @@
     <item
         android:id="@+id/btnConfig"
         android:title="Configuración" />
+    <item
+        android:id="@+id/btnViewOrdersTable"
+        android:title="Consultar Pedidos Mesa" />
 </menu>
