--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -16,6 +16,28 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/lblDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_toLeftOf="@+id/imgAccessories"
+            android:fontFamily="sans-serif"
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="dd/MM HH:mm"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
             android:id="@+id/lblProduct"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,7 +49,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="?android:textColorPrimary" />
 
-        <!--<TextView
+        <TextView
             android:id="@+id/lblAccessories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +59,7 @@
             android:maxLines="3"
             android:text="Accesorios"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="?android:textColorSecondary" />-->
+            android:textColor="?android:textColorSecondary" />
 
     </LinearLayout>
 
