--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -20,7 +20,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_toLeftOf="@+id/imgAccessories"
             android:fontFamily="sans-serif"
             android:paddingLeft="10dp"
             android:paddingRight="20dp"
@@ -38,7 +37,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/lblProduct"
+            android:id="@+id/lblProd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -50,7 +49,7 @@
             android:textColor="?android:textColorPrimary" />
 
         <TextView
-            android:id="@+id/lblAccessories"
+            android:id="@+id/lblAcces"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -75,7 +74,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_toLeftOf="@+id/imgAccessories"
             android:fontFamily="sans-serif"
             android:paddingLeft="10dp"
             android:paddingRight="20dp"
