--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -12,17 +12,26 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
+        android:layout_weight="2"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/lblOrderId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="sans-serif"
+            android:paddingLeft="10dp"
+            android:paddingRight="5dp"
+            android:text="111"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <TextView
             android:id="@+id/lblDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:fontFamily="sans-serif"
-            android:paddingLeft="10dp"
-            android:paddingRight="20dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="10dp"
             android:text="dd/MM HH:mm"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -33,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_gravity="center_vertical"
-        android:layout_weight="2"
+        android:layout_weight="3"
         android:orientation="vertical">
 
         <TextView
@@ -67,6 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_gravity="center_vertical"
+        android:layout_weight="0"
         android:orientation="horizontal">
 
         <TextView
@@ -76,7 +86,7 @@
             android:layout_gravity="center_vertical"
             android:fontFamily="sans-serif"
             android:paddingLeft="10dp"
-            android:paddingRight="20dp"
+            android:paddingRight="10dp"
             android:text="[10]"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
