--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="15dp">
+    android:padding="10dp">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -14,24 +14,26 @@
         android:layout_gravity="center_vertical"
         android:layout_weight="2"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/lblOrderId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:fontFamily="sans-serif"
-            android:paddingLeft="10dp"
+            android:paddingLeft="0dp"
             android:paddingRight="5dp"
-            android:text="111"
+            android:text="P-111"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <TextView
             android:id="@+id/lblDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:fontFamily="sans-serif"
-            android:paddingLeft="5dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="0dp"
+            android:paddingRight="5dp"
             android:text="dd/MM HH:mm"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -85,8 +87,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:fontFamily="sans-serif"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="0dp"
             android:text="[10]"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
