--- a/app/src/main/res/layout/table_row.xml
+++ b/app/src/main/res/layout/table_row.xml
@@ -1,28 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center_vertical"
-    android:orientation="horizontal"
-    android:padding="15dp">
-
-    <LinearLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tableName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:orientation="horizontal">
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    <TextView
+        android:id="@+id/tableId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
 
-        <Button
-            android:id="@+id/btnTableName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="0dp"
-            android:fontFamily="sans-serif"
-            android:onClick="selectTable"
-            android:text="Table Name" />
-    </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
