--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -11,16 +11,37 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sge.mobile.presentation.OrderActivity">
 
-    <Spinner
-        android:id="@+id/spinnerTables"
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="4dp"
-        android:focusable="true"
-        android:fontFamily="sans-serif"
-        android:spinnerMode="dialog" />
+        android:orientation="horizontal"
+        android:layout_marginTop="4dp">
 
+        <TextView
+            android:id="@+id/lblTableName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_gravity="center_vertical"
+            android:text="Sin mesa"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <Button
+            android:id="@+id/btnSelectTable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_gravity="center_vertical"
+            android:onClick="sendOrder"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:text="Mesas" />
+    </GridLayout>
     <EditText
         android:id="@+id/txtObservation"
         android:layout_width="match_parent"
