--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -37,7 +37,7 @@
             android:layout_row="0"
             android:layout_column="2"
             android:layout_gravity="center_vertical"
-            android:onClick="sendOrder"
+            android:onClick="selectTable"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="Mesas" />
