--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -18,28 +18,45 @@
         android:orientation="horizontal"
         android:layout_marginTop="4dp">
 
-        <TextView
-            android:id="@+id/lblTableName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="center_vertical"
-            android:text="Sin mesa"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+        <GridLayout android:layout_width="wrap_content">
+
+            <TextView
+                android:id="@+id/lblTable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="5dp"
+                android:text="Mesa"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/lblTableName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="5dp"
+                android:ellipsize="end"
+                android:text="SIN MESA"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </GridLayout>
 
         <Button
             android:id="@+id/btnSelectTable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
-            android:layout_column="2"
+            android:layout_column="3"
             android:layout_gravity="center_vertical"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:ellipsize="end"
             android:onClick="selectTable"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:text="Mesas" />
     </GridLayout>
     <EditText
