--- a/app/src/main/res/layout/activity_table_orders.xml
+++ b/app/src/main/res/layout/activity_table_orders.xml
@@ -11,15 +11,54 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.sge.mobile.presentation.TableOrdersActivity">
 
-    <Spinner
-        android:id="@+id/spinnerTables"
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:layout_marginTop="4dp"
-        android:focusable="true"
-        android:fontFamily="sans-serif"
-        android:spinnerMode="dialog" />
+        android:orientation="horizontal"
+        android:layout_marginTop="4dp">
+
+        <GridLayout android:layout_width="wrap_content">
+
+            <TextView
+                android:id="@+id/lblTable"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="0"
+                android:layout_column="0"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="5dp"
+                android:text="Mesa"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+
+            <TextView
+                android:id="@+id/lblTableName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="1"
+                android:layout_column="0"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="0dp"
+                android:layout_marginRight="5dp"
+                android:ellipsize="end"
+                android:text="SIN MESA"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </GridLayout>
+
+        <Button
+            android:id="@+id/btnSelectTable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="3"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:ellipsize="end"
+            android:onClick="selectTable"
+            android:text="Mesas" />
+    </GridLayout>
 
     <Button
         android:id="@+id/btnSearchOrders"
