--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -7,15 +7,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:focusableInTouchMode="true"
     tools:context="com.sge.mobile.presentation.ProductsActivity">
+
     <EditText
         android:id="@+id/searchText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@android:drawable/ic_menu_search"
-        android:hint="Buscar">
+        android:drawablePadding="5dp"
+        android:hint="Buscar"
+        android:imeOptions="actionDone"
+        android:inputType="textAutoComplete"
+        android:selectAllOnFocus="false"
+        android:singleLine="true" />
 
-    </EditText>
     <ExpandableListView
         android:id="@+id/productsList"
         android:layout_width="match_parent"
