--- a/app/src/main/res/layout/category_row.xml
+++ b/app/src/main/res/layout/category_row.xml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="15dp">
 
     <TextView
         android:id="@+id/txtCategoryName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight=".80"
         android:fontFamily="sans-serif"
         android:paddingLeft="25dp"
         android:text="Category"
+        android:ellipsize="end"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/imgCategory"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight=".20"
         android:layout_alignParentRight="true"
         android:layout_marginLeft="20px"
         android:layout_marginRight="20px"
         android:src="@drawable/category" />
-</RelativeLayout>
+</LinearLayout>
