--- a/app/src/main/res/layout/table_row.xml
+++ b/app/src/main/res/layout/table_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
     android:orientation="horizontal"
@@ -8,14 +8,13 @@
 
     <TextView
         android:id="@+id/tableName"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_alignParentTop="true"
         android:paddingLeft="25dp"
         android:ellipsize="end"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold"
         android:text="Mesa"/>
 
     <TextView
